# SREcodex

./: .gitignore  AGENTS.md  MIGRATE-SKILLS.md  QUICKSTART.md  README.md
codexskills/: AGENTS-TEMPLATE.md  CREDITS.md  LICENSE.md  Makefile  README.md
codexskills/docs/: AGENTS-GUIDE.md  AGENTS.md  ANALYSIS.md  IMPLEMENTATION-GUIDE.md  START-HERE.md  WHAT-ARE-SKILLS.md
codexskills/scripts/: codex-skills  install-skills.sh
dotcodex/: AGENTS.md  AGENTS.md.backup.20251115_132735  AGENTS.md.backup.20251115_133118  config.toml
dotcodex/docs/: PROGRAMMATIC-ORCHESTRATION.md  SCRIPT-FIRST-DIRECTIVE.md  SCRIPT-FIRST-SKILLS.md  SKILL-MIGRATION-CHECKLIST.md  SKILL-SCHEMA.md
dotcodex/scripts/: index-skills.sh
dotcodex/skills/: INDEX.md
dotcodex/skills/document-parser/: README.md  SKILL.md  config.toml.example
dotcodex/skills/skill-builder/: SKILL.md
dotcodex/skills/time-awareness/: SKILL.md
dotcodex/skills/uv-python/: SKILL.md
dotcodex/templates/: SKILL.template.md
feature-management/: OVERPROMPT.md  README.md  UPDATE_LOG.md
feature-management/bugs/: bugs.md
feature-management/completed/FEAT-001-skill-standardization-schema/: feature_request.json
feature-management/completed/FEAT-002-librarian-dynamic-discovery/: PROMPT.md  feature_request.json
feature-management/features/: features.md
mcp-server/: .gitignore  Makefile  README.md  SETUP.md  SYSTEMD.md  docker-compose.yml  index_skills.py  mcp_server.py  pyproject.toml  requirements.txt  test_search.py
mcp-server/mcp_server.egg-info/: PKG-INFO  entry_points.txt  requires.txt
(+21 files in other folders)
